Add support to get period on pressing comma at num key pad

BUG:424402
FIXED-IN:4.8.5